@@ -3,6 +3,7 @@ LLNL Team
   Hyojin Kim <kim63@llnl.gov>
   Sam Jacobs <jacobs32@llnl.gov>
   Adam Moody <moody20@llnl.gov>
+  Tal Ben-Nun <talbn@llnl.gov>
 
 LLNL Summer Interns
   Nikoli Dryden <dryden1@llnl.gov>, <dryden2@illinois.edu>
