@@ -31,6 +31,7 @@ set_full_path(THIS_DIR_HEADERS
   covariance.hpp
   dft_abs.hpp
   dft_abs_builder.hpp
+  external.hpp
   mini_batch_index.hpp
   mini_batch_size.hpp
   one_hot.hpp
